Physical Device class created

--- a/VulkanEngineProject/VulkanEngineProject.vcxproj
+++ b/VulkanEngineProject/VulkanEngineProject.vcxproj
@@ -148,13 +148,17 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Validation.cpp" />
     <ClCompile Include="VulkanInstance.cpp" />
+    <ClCompile Include="VulkanPhysicalDevice.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BUILD_ORDER.h" />
     <ClInclude Include="Initializers.h" />
+    <ClInclude Include="QueueFamilyIndices.h" />
+    <ClInclude Include="Renderer.h" />
     <ClInclude Include="Validation.h" />
     <ClInclude Include="VulkanConfiguration.h" />
     <ClInclude Include="VulkanInstance.h" />
+    <ClInclude Include="VulkanPhysicalDevice.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
