--- a/VulkanEngineProject/VulkanEngineProject.vcxproj.filters
+++ b/VulkanEngineProject/VulkanEngineProject.vcxproj.filters
@@ -33,6 +33,21 @@
     <Filter Include="Sound">
       <UniqueIdentifier>{69a8cb02-8e5e-47b4-af5b-212f1b7f63b5}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Renderer\Header Files">
+      <UniqueIdentifier>{04a128df-eea9-49a4-bf1d-cae604f24c0c}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Renderer\Source Files">
+      <UniqueIdentifier>{bf99e25d-bec3-4303-a1fa-1742bc993d70}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Input\Header Files">
+      <UniqueIdentifier>{49629377-4e04-47dc-9b3d-2ab28b9a537f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Input\Source Files">
+      <UniqueIdentifier>{72436fd8-57ca-4ae8-b54f-ac663854e160}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Animation">
+      <UniqueIdentifier>{052fe682-acd7-44c0-ae42-dbb01a83d219}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Initializers.cpp">
@@ -61,6 +76,9 @@
     </ClCompile>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Zodiacpch.cpp">
+      <Filter>Engine\Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Window.cpp">
       <Filter>Engine\Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -92,9 +110,6 @@
     <ClInclude Include="Clock.h">
       <Filter>Engine\Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Renderer.h">
-      <Filter>Engine\Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="System.h">
       <Filter>Engine\Header Files</Filter>
     </ClInclude>
@@ -107,13 +122,31 @@
     <ClInclude Include="Settings.h">
       <Filter>Engine\Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Input.h">
-      <Filter>Input</Filter>
-    </ClInclude>
     <ClInclude Include="Zodiac.h">
       <Filter>Engine\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Zodiacpch.h">
+      <Filter>Engine\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Camera.h">
+      <Filter>Renderer\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Material.h">
+      <Filter>Renderer\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Renderer.h">
+      <Filter>Renderer\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Input.h">
+      <Filter>Input\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Model.h">
+      <Filter>Renderer\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Vertex.h">
+      <Filter>Renderer\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Window.h">
       <Filter>Engine\Header Files</Filter>
     </ClInclude>
   </ItemGroup>
