Dobe some work on swapchains and preparing for graphics rendering

--- a/VulkanEngineProject/VulkanEngineProject.vcxproj.filters
+++ b/VulkanEngineProject/VulkanEngineProject.vcxproj.filters
@@ -87,6 +87,9 @@
     <ClCompile Include="PerspectiveCamera.cpp">
       <Filter>Renderer\Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="VulkanSwapchain.cpp">
+      <Filter>Vulkan\Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Initializers.h">
@@ -162,6 +165,12 @@
       <Filter>Renderer\Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Texture.h">
+      <Filter>Renderer\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="VulkanSwapChainBuffer.h">
+      <Filter>Vulkan\Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Mesh.h">
       <Filter>Renderer\Header Files</Filter>
     </ClInclude>
   </ItemGroup>
