--- a/VulkanEngineProject/VulkanEngineProject.vcxproj
+++ b/VulkanEngineProject/VulkanEngineProject.vcxproj
@@ -183,11 +183,13 @@
     <ClCompile Include="VulkanDevice.cpp" />
     <ClCompile Include="VulkanInstance.cpp" />
     <ClCompile Include="VulkanPhysicalDevice.cpp" />
+    <ClCompile Include="VulkanSwapchain.cpp" />
     <ClCompile Include="Window.cpp" />
     <ClCompile Include="Zodiacpch.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h" />
+    <ClInclude Include="Mesh.h" />
     <ClInclude Include="OrthographicCamera.h" />
     <ClInclude Include="Clock.h" />
     <ClInclude Include="EntryPoint.h" />
@@ -209,6 +211,7 @@
     <ClInclude Include="VulkanInstance.h" />
     <ClInclude Include="VulkanPhysicalDevice.h" />
     <ClInclude Include="VulkanSwapchain.h" />
+    <ClInclude Include="VulkanSwapChainBuffer.h" />
     <ClInclude Include="Window.h" />
     <ClInclude Include="Zodiac.h" />
     <ClInclude Include="Zodiacpch.h" />
