--- a/VulkanEngineProject/VulkanEngineProject.vcxproj.filters
+++ b/VulkanEngineProject/VulkanEngineProject.vcxproj.filters
@@ -179,5 +179,8 @@
     <ClInclude Include="Mesh.h">
       <Filter>Renderer\Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="SurfaceDetails.h">
+      <Filter>Vulkan\Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
