Depth attachment and image view
Where this code is located might only be temporary

--- a/VulkanEngineProject/VulkanEngineProject.vcxproj
+++ b/VulkanEngineProject/VulkanEngineProject.vcxproj
@@ -193,6 +193,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h" />
+    <ClInclude Include="DepthStencil.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="OrthographicCamera.h" />
     <ClInclude Include="Clock.h" />
